--- a/templates/shop/courses.html
+++ b/templates/shop/courses.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %} {% block title %}Courses{% endblock title %}
-
-<div>
-  {% block content %}
+{% extends "base.html" %} 
+{% block title %}Courses{% endblock title %}
+{% block content %}
+<main class="container">
   <table class="table mt-5 table-bordered table-striped table-hover">
-    <thead>
+    <thead class="table-dark">
       <tr>
         <th>Title</th>
         <th>Category</th>
@@ -24,5 +24,16 @@
       {% endfor %}
     </tbody>
   </table>
-  {% endblock content %}
-</div>
+</main>
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
